# libadwaita-app

./: meson.build  org.martins.ShowHide.json
data/: meson.build  org.martins.ShowHide.appdata.xml.in  org.martins.ShowHide.desktop.in  org.martins.ShowHide.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: app.c  app.h  gresource.xml  main.c  meson.build  showhide-application.c  showhide-window.c  showhide-window.ui  showhide.gresource.xml  window.c  window.h  window.ui
